--- a/TQA/TQA/Sdl.Community.TQA.csproj
+++ b/TQA/TQA/Sdl.Community.TQA.csproj
@@ -5,7 +5,7 @@
 		<PluginDeploymentPath>$(AppData)\Sdl\Sdl Trados Studio\15\Plugins</PluginDeploymentPath>
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
 		<UseWindowsForms>true</UseWindowsForms>
-		<TradosFolder>$(MSBuildProgramFiles32)\SDL\SDL Trados Studio</TradosFolder>
+		<TradosFolder>$(MSBuildProgramFiles32)\SDL\SDL Trados Studio\Studio15</TradosFolder>
 		<UseWPF>true</UseWPF>
 		<ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
 	</PropertyGroup>
@@ -25,43 +25,43 @@
 			<HintPath>3rd party signed\FastMember.dll</HintPath>
 		</Reference>
 		<Reference Include="NLog">
-			<HintPath>$(TradosFolder)\Studio15\NLog.dll</HintPath>
+			<HintPath>$(TradosFolder)\NLog.dll</HintPath>
 		</Reference>
 		<Reference Include="Sdl.Core.Globalization">
-			<HintPath>$(TradosFolder)\Studio15\Sdl.Core.Globalization.dll</HintPath>
+			<HintPath>$(TradosFolder)\Sdl.Core.Globalization.dll</HintPath>
 		</Reference>
 		<Reference Include="Sdl.Desktop.IntegrationApi">
-			<HintPath>$(TradosFolder)\Studio15\Sdl.Desktop.IntegrationApi.dll</HintPath>
+			<HintPath>$(TradosFolder)\Sdl.Desktop.IntegrationApi.dll</HintPath>
 		</Reference>
 		<Reference Include="Sdl.Desktop.IntegrationApi.Extensions">
-			<HintPath>$(TradosFolder)\Studio15\Sdl.Desktop.IntegrationApi.Extensions.dll</HintPath>
+			<HintPath>$(TradosFolder)\Sdl.Desktop.IntegrationApi.Extensions.dll</HintPath>
 		</Reference>
 		<Reference Include="Sdl.Desktop.Platform.Controls">
-			<HintPath>$(TradosFolder)\Studio15\Sdl.Desktop.Platform.Controls.dll</HintPath>
+			<HintPath>$(TradosFolder)\Sdl.Desktop.Platform.Controls.dll</HintPath>
 		</Reference>
 		<Reference Include="Sdl.Desktop.Platform.Styles">
-			<HintPath>$(TradosFolder)\Studio15\Sdl.Desktop.Platform.Styles.dll</HintPath>
+			<HintPath>$(TradosFolder)\Sdl.Desktop.Platform.Styles.dll</HintPath>
 		</Reference>
 		<Reference Include="Sdl.FileTypeSupport.Framework.Core">
-			<HintPath>$(TradosFolder)\Studio15\Sdl.FileTypeSupport.Framework.Core.dll</HintPath>
+			<HintPath>$(TradosFolder)\Sdl.FileTypeSupport.Framework.Core.dll</HintPath>
 		</Reference>
 		<Reference Include="Sdl.FileTypeSupport.Framework.Implementation">
-			<HintPath>$(TradosFolder)\Studio15\Sdl.FileTypeSupport.Framework.Implementation.dll</HintPath>
+			<HintPath>$(TradosFolder)\Sdl.FileTypeSupport.Framework.Implementation.dll</HintPath>
 		</Reference>
 		<Reference Include="Sdl.ProjectAutomation.AutomaticTasks">
-			<HintPath>$(TradosFolder)\Studio15\Sdl.ProjectAutomation.AutomaticTasks.dll</HintPath>
+			<HintPath>$(TradosFolder)\Sdl.ProjectAutomation.AutomaticTasks.dll</HintPath>
 		</Reference>
 		<Reference Include="Sdl.ProjectAutomation.Core">
-			<HintPath>$(TradosFolder)\Studio15\Sdl.ProjectAutomation.Core.dll</HintPath>
+			<HintPath>$(TradosFolder)\Sdl.ProjectAutomation.Core.dll</HintPath>
 		</Reference>
 		<Reference Include="Sdl.ProjectAutomation.FileBased">
-			<HintPath>$(TradosFolder)\Studio15\Sdl.ProjectAutomation.FileBased.dll</HintPath>
+			<HintPath>$(TradosFolder)\Sdl.ProjectAutomation.FileBased.dll</HintPath>
 		</Reference>
 		<Reference Include="Sdl.TranslationStudioAutomation.IntegrationApi">
-			<HintPath>$(TradosFolder)\Studio15\Sdl.TranslationStudioAutomation.IntegrationApi.dll</HintPath>
+			<HintPath>$(TradosFolder)\Sdl.TranslationStudioAutomation.IntegrationApi.dll</HintPath>
 		</Reference>
 		<Reference Include="Sdl.Core.Settings">
-			<HintPath>$(TradosFolder)\Studio15\Sdl.Core.Settings.dll</HintPath>
+			<HintPath>$(TradosFolder)\Sdl.Core.Settings.dll</HintPath>
 		</Reference>
 	</ItemGroup>
 	<ItemGroup>
