--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,7 +9,7 @@ resources:
   - repository: SdlCommunity
     type: github
     name: RWS/Sdl-Community
-    ref: master
+    ref: master_Yml
     endpoint: GitHub_PublicRepo
   pipelines:
   - pipeline: TradosStudio_Resource
