--- a/.gitignore
+++ b/.gitignore
@@ -268,3 +268,4 @@ TMX_TranslationProvider/TMX_TranslationProviderWithUITest.sln
 /memoQ TM Provider/_bin/zh-Hans/memoQPlugin.resources.dll
 /Jobs/Sdl.Community.Jobs/Properties/launchSettings.json
 StarTransit/.editorconfig
+DSI Viewer/.editorconfig
