--- a/Trados Transcreate/SDLTranscreate/Transcreate.csproj
+++ b/Trados Transcreate/SDLTranscreate/Transcreate.csproj
@@ -12,7 +12,7 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <PropertyGroup>
-    <TradosFolder>C:\Code\SDL\Trados\Bin\Mixed Platforms\Debug</TradosFolder>
+    <TradosFolder>C:\Program Files (x86)\Trados\Trados Studio\Studio18</TradosFolder>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Rws.MultiSelectComboBox">
