--- a/ApplyTM Template/Sdl.Community.ApplyTMTemplate/Sdl.Community.ApplyTMTemplate.csproj
+++ b/ApplyTM Template/Sdl.Community.ApplyTMTemplate/Sdl.Community.ApplyTMTemplate.csproj
@@ -4,8 +4,8 @@
 		<TargetFramework>net48</TargetFramework>
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
 		<LangVersion>latest</LangVersion>
-		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\18Beta\Plugins</PluginDeploymentPath>
-		<TradosFolder>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio18Beta</TradosFolder>
+		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\18\Plugins</PluginDeploymentPath>
+		<TradosFolder>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio18</TradosFolder>
 	</PropertyGroup>
 	<ItemGroup>
 	  <None Remove="Resources\ProjectTemplate.ico" />
