--- a/Qualitivity/Sdl.Community.Qualitivity/Sdl.Community.Qualitivity.csproj
+++ b/Qualitivity/Sdl.Community.Qualitivity/Sdl.Community.Qualitivity.csproj
@@ -23,7 +23,7 @@
     <UseApplicationTrust>false</UseApplicationTrust>
     <EmbeddedResourceUseDependentUponConvention>true</EmbeddedResourceUseDependentUponConvention>
     <BootstrapperEnabled>true</BootstrapperEnabled>
-    <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\18\Plugins</PluginDeploymentPath>
+    <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\18Beta\Plugins</PluginDeploymentPath>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <UseWindowsForms>true</UseWindowsForms>
     <UseWPF>true</UseWPF>
@@ -40,7 +40,7 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <PropertyGroup>
-    <TradosFolder>C:\Program Files (x86)\Trados\Trados Studio\Studio18</TradosFolder>
+    <TradosFolder>C:\Program Files (x86)\Trados\Trados Studio\Studio18Beta</TradosFolder>
   </PropertyGroup>
   <ItemGroup>
     <None Remove="Resources\Information-32.png" />
@@ -156,12 +156,12 @@
     <PackageReference Include="Sdl.Core.PluginFramework.Build">
       <Version>18.0.1</Version>
     </PackageReference>
-    <PackageReference Include="System.Management" Version="8.0.0" />
+    <PackageReference Include="System.Management" Version="9.0.5" />
     <PackageReference Include="Trados.Community.Toolkit.Core">
-      <Version>5.0.1</Version>
+      <Version>5.1.0</Version>
     </PackageReference>
     <PackageReference Include="Trados.Community.Toolkit.LanguagePlatform">
-      <Version>5.0.1</Version>
+      <Version>5.1.0</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
