--- a/YourProductivity/Sdl.Community.YourProductivity.Controls/Sdl.Community.YourProductivity.Persistance.csproj
+++ b/YourProductivity/Sdl.Community.YourProductivity.Controls/Sdl.Community.YourProductivity.Persistance.csproj
@@ -5,7 +5,7 @@
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <UseWindowsForms>true</UseWindowsForms>
     <ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
-    <TradosFolder>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio18</TradosFolder>
+    <TradosFolder>C:\Code\SDL\Trados\Bin\Mixed Platforms\Debug</TradosFolder>
   </PropertyGroup>
   <PropertyGroup>
     <SignAssembly>true</SignAssembly>
@@ -16,6 +16,9 @@
   <ItemGroup>
     <Reference Include="Newtonsoft.Json">
       <HintPath>$(TradosFolder)\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="NLog">
+      <HintPath>$(TradosFolder)\NLog.dll</HintPath>
     </Reference>
     <Reference Update="System">
       <Private>True</Private>
@@ -32,21 +35,8 @@
     <ProjectReference Include="..\Sdl.Community.YourProductivity.Model\Sdl.Community.YourProductivity.Model.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
-    <PackageReference Include="NLog">
-      <Version>4.7.15</Version>
-    </PackageReference>
-    <PackageReference Include="RavenDB.Client">
-      <Version>3.0.30187</Version>
-    </PackageReference>
-    <PackageReference Include="RavenDB.Database">
-      <Version>3.0.30187</Version>
-    </PackageReference>
-    <PackageReference Include="RavenDB.Embedded">
-      <Version>3.0.30187</Version>
-    </PackageReference>
-    <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
-    <PackageReference Include="System.ComponentModel.Composition" Version="8.0.0" />
-    <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
+    <PackageReference Include="RavenDB.Client" Version="3.5.9" />
+    <PackageReference Include="RavenDB.Database" Version="3.5.9" />
+    <PackageReference Include="RavenDB.Embedded" Version="3.5.9" />
   </ItemGroup>
 </Project>
