--- a/YourProductivity/Sdl.Community.YourProductivity/Sdl.Community.YourProductivity.csproj
+++ b/YourProductivity/Sdl.Community.YourProductivity/Sdl.Community.YourProductivity.csproj
@@ -7,9 +7,12 @@
     <UseWindowsForms>true</UseWindowsForms>
     <ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
-    <TradosFolder>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio18</TradosFolder>
+    <TradosFolder>C:\Code\SDL\Trados\Bin\Mixed Platforms\Debug</TradosFolder>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="NLog">
+      <HintPath>$(TradosFolder)\NLog.dll</HintPath>
+    </Reference>
     <Reference Include="RestSharp, Version=105.2.3.0, Culture=neutral, PublicKeyToken=a6f9048fb51b33ed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\3rd Party\RestSharp.dll</HintPath>
@@ -90,31 +93,19 @@
     <ProjectReference Include="..\Sdl.Community.YourProductivity.Model\Sdl.Community.YourProductivity.Model.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="morelinq">
       <Version>3.3.2</Version>
-    </PackageReference>
-    <PackageReference Include="NLog">
-      <Version>4.7.15</Version>
     </PackageReference>
     <PackageReference Include="ObjectListView.Official">
       <Version>2.9.1</Version>
     </PackageReference>
-    <PackageReference Include="RavenDB.Client">
-      <Version>3.0.30187</Version>
-    </PackageReference>
-    <PackageReference Include="RavenDB.Embedded">
-      <Version>3.0.30187</Version>
-    </PackageReference>
+    <PackageReference Include="RavenDB.Client" Version="3.5.9" />
+    <PackageReference Include="RavenDB.Embedded" Version="3.5.9" />
     <PackageReference Include="Sdl.Core.PluginFramework">
       <Version>2.1.0</Version>
     </PackageReference>
     <PackageReference Include="Sdl.Core.PluginFramework.Build">
       <Version>18.0.1</Version>
-    </PackageReference>
-    <PackageReference Include="System.ComponentModel.Composition" Version="8.0.0" />
-    <PackageReference Include="TweetMoaSharp">
-      <Version>6.0.2</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
