--- a/Amazon Translate MT provider/Sdl.Community.AmazonTranslateTradosPlugin.csproj
+++ b/Amazon Translate MT provider/Sdl.Community.AmazonTranslateTradosPlugin.csproj
@@ -6,7 +6,7 @@
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
 		<LangVersion>latest</LangVersion>
 		<UseWPF>true</UseWPF>
-		<TradosFolder>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio18</TradosFolder>
+		<TradosFolder>C:\Things\Code\SDL\Trados\Bin\Mixed Platforms\Debug</TradosFolder>
 		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\18\Plugins</PluginDeploymentPath>
 	</PropertyGroup>
 
@@ -84,12 +84,8 @@
 			<SubType>Designer</SubType>
 		</Content>
 	</ItemGroup>
-	
 	<ItemGroup>
-		<None Include="app.config" />
-	</ItemGroup>
-	<ItemGroup>
-		<PackageReference Include="AWSSDK.Translate" Version="3.7.4.35" />
+		<PackageReference Include="AWSSDK.Translate" Version="4.0.0.4" />
 		<PackageReference Include="Sdl.Core.PluginFramework">
 			<Version>2.1.0</Version>
 		</PackageReference>
